# airport-docs

./: .gitignore  LICENSE  _brand.yml  _quarto.yml  about.qmd  api.qmd  benchmark-results.json  benchmark.qmd  build_instructions.qmd  catalog_current_version.qmd  catalog_integration.qmd  data_as_a_service.qmd  duckdb_functions.qmd  extension_api.qmd  faq.qmd  features.qmd  index.qmd  motivation.qmd  newsletter.qmd  protocol_implementation_golang.qmd  publish.sh  pyproject.toml  request_authentication.qmd  rethinking_data_strategy_airport_extension.qmd  robots.txt  scalar_functions.qmd  schema_create.qmd  schema_drop.qmd  server_action_add_column.qmd  server_action_add_constraint.qmd  server_action_add_field.qmd  server_action_catalog_version.qmd  server_action_change_column_type.qmd  server_action_column_statistics.qmd  server_action_column_statitics.qmd  server_action_create_schema.qmd  server_action_create_table.qmd  server_action_create_transaction.qmd  server_action_drop_not_null.qmd  server_action_drop_schema.qmd  (+37 more)
src/airport_docs/: __init__.py
