[project]
name = "airport-docs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rusty Conover", email = "rusty@conover.me" }
]
dependencies = [
    "jupyter>=1.1.1",
    "zstandard>=0.23.0",
    "pyarrow>=19.0.1",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/airport_docs"]
